--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "learning nose",
   "main": "server.js",
   "scripts": {
+    "start": "node --import=tsx server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "dinesh",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "github:types/express",
+    "@types/sequelize": "github:types/sequelize",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -17,5 +20,9 @@
     "mongoose": "^8.6.1",
     "mysql2": "^3.11.3",
     "sequelize": "^6.37.3"
+  },
+  "devDependencies": {
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.2"
   }
 }
